--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; connect-src *; script-src *; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
         <link rel="localization" href="locales/browser.json">
         <link type="text/css" href="css/font.css" rel="stylesheet">
         <link type="text/css" href="css/main.css" rel="stylesheet"/>
