--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; connect-src *; script-src *; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta http-equiv="X-Frame-Options" content="ALLOW-FROM *" />
+        <meta http-equiv="Content-Security-Policy"
+              content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; connect-src *; script-src * 'self' 'unsafe-inline' 'unsafe-eval'; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; media-src *;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
